# justatest2

./: .bumpversion.cfg  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  make.bat
justatest2/: __init__.py  my_module.py
tests/: test_my_module.py
